[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "deepszsim"
version = "0.1.0"
description = "code for fast simulations of galaxy clusters"
authors = [{name = "Eve Vavagiakis", email = "ev66@cornell.edu"}]
license = {text="LICENSE.txt"}
requires-python = ">= 3.9, <3.12"
dependencies = [
  "camb >= 1.4.0",
  "h5py >= 3.8.0",
  "numpy < 1.26.3",
  "astropy >= 6.0",
  "setuptools < 60.0",
  "pixell == 0.17.3",
  "colossus >= 1.3.0",
  "tqdm >= 4.66.0",
]

[tool.dev-dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"

[tool.setuptools.packages.find]
namespaces = false